# retroMCP

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  BUGFIXING.md  CLAUDE.md  CODEREVIEW.md  MCP.md  Makefile  PHASE_4B_TESTING.md  PLAN.md  README.md  SPEC.md  SSH_SETUP_GUIDE.md  TESTING_SUMMARY.md  VSCODE_SETUP.md  install-mcp-servers.sh  manage_state_spec.md  manual_test.py  pyproject.toml  run_tests.py  setup.sh  test_client.py  test_gaming.sh  test_hardware.sh  test_mcp_server.py  test_mcp_setup.py  test_state.sh  vulture_whitelist.py
config/: retromcp-sudoers
docs/: architecture-flow.md
retromcp/: __init__.py  config.py  container.py  discovery.py  profile.py  secure_ssh_handler.py  secure_ssh_handler_v2.py  server.py  ssh_handler.py  timeout_config.py
retromcp/application/: __init__.py  core_use_cases.py  docker_use_cases.py  gaming_use_cases.py  package_use_cases.py  state_use_cases.py  system_use_cases.py  use_cases.py  use_cases_old.py
retromcp/domain/: __init__.py  models.py  ports.py
retromcp/infrastructure/: __init__.py  cache_system.py  es_systems_parser.py  persistent_queue_storage.py  security_validator.py  ssh_controller_repository.py  ssh_docker_repository.py  ssh_emulator_repository.py  ssh_retropie_client.py  ssh_state_repository.py  ssh_system_repository.py  structured_logger.py
retromcp/tools/: __init__.py  admin_tools.py  base.py  command_execution_tools.py  command_queue.py  connection_management_tools.py  controller_tools.py  docker_tools.py  emulationstation_tools.py  file_management_tools.py  gaming_system_tools.py  hardware_monitoring_tools.py  hardware_tools.py  management_tools.py  package_management_tools.py  retropie_tools.py  service_management_tools.py  state_tools.py  system_info_tools.py  system_management_tools.py  system_tools.py  system_update_tools.py
scripts/: security-audit.sh  security-migration.sh  test-inspector.sh  verify-user-permissions.sh
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_architecture_compliance.py  test_mcp_protocol.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_architecture_integration.py  test_core_management.py  test_discovery_profile_integration.py  test_end_to_end_architecture.py  test_file_creation_bug.py  test_real_pi_connection.py  test_simple_integration.py  test_ssh_error_integration.py  test_tool_execution.py  test_tool_workflows.py
tests/unit/: __init__.py  test_admin_tools.py  test_broken_tools_contract.py.bak  test_cache_system.py  test_command_execution_tools.py  test_command_injection_security.py  test_command_queue_tools.py  test_config.py  test_connection_management_tools.py  test_container.py  test_controller_tools.py  test_discovery.py  test_docker_tools.py  test_emulationstation_tools.py  test_file_management_edge_cases.py  test_file_management_tools.py  test_gaming_system_tools.py  test_gaming_system_tools_error_messages.py  test_gaming_system_tools_extended.py  test_gaming_system_tools_result_pattern.py  test_gaming_system_tools_structured_logging.py  test_hardware_monitoring_tools.py  test_hardware_tools.py  test_profile.py  (+24 more)
(+27 files in other folders)
